--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ path = "src/main.rs"
 
 [dependencies]
 spring = "0.4"
-spring-grpc = "0.4"
+spring-web = { version = "0.4", features = ["multipart"] }
 spring-redis = "0.4"
 spring-opentelemetry = "0.4"
+axum = "0.8"
 tokio = { version = "1", features = ["full"] }
 serde = "1"
 serde_json = "1"
@@ -20,8 +21,3 @@ serde_with = "3"
 anyhow = "1"
 fastembed = { version = "4.9", features = ["ort-load-dynamic"] }
 derive_more = { version = "2", features = ["deref", "deref_mut"] }
-prost = "0.13"
-tonic = "0.13"
-
-[build-dependencies]
-tonic-build = "0.13"
